# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py
